LayoutTests/http/tests/security/postMessage/invalid-origin-throws-exception-expected.txt
window.location.href = http://127.0.0.1:8000/security/postMessage/invalid-origin-throws-exception.html
waiting...
Encountered exception SyntaxError: The string did not match the expected pattern. while posting message to ''.
Encountered exception SyntaxError: The string did not match the expected pattern. while posting message to 'asdf'.
Encountered exception SyntaxError: The string did not match the expected pattern. while posting message to '/tmp/foo'.
Encountered exception SyntaxError: The string did not match the expected pattern. while posting message to '//localhost'.
Encountered exception SyntaxError: The string did not match the expected pattern. while posting message to 'asdf:'.
Encountered exception SyntaxError: The string did not match the expected pattern. while posting message to 'http:'.
Received message: data="Received message: data="done" origin="http://127.0.0.1:8000"" origin="http://localhost:8000"

